# paper-review

FAST/fast+berkley_cable_routing/: README.md  pyproject.toml  run_experiment.py  step3_fast_tokenization.py  step3b_prediction_task.py  step4_hypothesis_test.py
FAST/fast+berkley_cable_routing/data/: dataset_stats.npy
FAST/fast+berkley_cable_routing/results/: fast_sweep.csv  hypothesis_test_results.npy
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s10_v1024_k8.0/: tokenizer.json
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s10_v2048_k10.0/: tokenizer.json
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s10_v2048_k8.0/: tokenizer.json
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s10_v4096_k12.0/: processor_config.json
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s10_v4096_k8.0/: tokenizer.json
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s1_v1024_k10.0/: tokenizer.json
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s1_v1024_k12.0/: tokenizer.json
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s1_v1024_k8.0/: processor_config.json
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s1_v2048_k10.0/: tokenizer.json
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s1_v4096_k10.0/: processor_config.json
FAST/fast+berkley_cable_routing/results/custom_fast_sweep/cs1.0_s1_v4096_k8.0/: tokenizer.json
FAST/fast+berkley_cable_routing/results/custom_fast_tokenizer/: tokenizer.json
(+148 files in other folders)
